[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["yura_filchakov <filchakov1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-session = "^0.8.0"
flask-login = "^0.6.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
shell = "^1.0.1"
flask-shell-ipython = "^0.5.3"
flask-migrate = "^4.1.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
